[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chumicro-compat"
dynamic = ["version"]
description = "Cross-runtime compatibility polyfills for CircuitPython, MicroPython, and CPython — functools.partial and more."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ChuMicro" },
]
keywords = [
    "circuitpython", "micropython", "microcontroller", "embedded",
    "esp32", "rp2040", "polyfill", "functools",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "chumicro-test-harness",
]

[project.urls]
Homepage = "https://github.com/ChuMicro/ChuMicro"
Documentation = "https://chumicro.github.io/ChuMicro/compat/stable/"
Source = "https://github.com/ChuMicro/ChuMicro/tree/main/libraries/compat"
Issues = "https://github.com/ChuMicro/ChuMicro/issues"
Bundle = "https://github.com/ChuMicro/ChuMicro-Bundle"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>\\S+)"

[tool.hatch.build.targets.sdist]
only-include = ["src/", "VERSION", "README.md", "tests/", "examples/", "docs/"]
exclude = [".gitignore"]

[tool.hatch.build.targets.wheel]
packages = ["src/chumicro_compat"]
