[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chumicro-requests"
dynamic = ["version"]
description = "Non-blocking HTTP/1.1 client for CircuitPython, MicroPython, and CPython."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ChuMicro" },
]
dependencies = [
    "chumicro-config",
    "chumicro-sockets",
    "chumicro-timing",
]
keywords = [
    "circuitpython", "micropython", "microcontroller", "embedded",
    "esp32", "rp2040", "http",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "chumicro-test-harness",
    "chumicro-pytest-device",
    "chumicro-workspace",
    "chumicro-wifi",
]

[project.urls]
Homepage = "https://github.com/ChuMicro/ChuMicro"
Documentation = "https://chumicro.github.io/ChuMicro/requests/stable/"
Source = "https://github.com/ChuMicro/ChuMicro/tree/main/libraries/requests"
Issues = "https://github.com/ChuMicro/ChuMicro/issues"
Bundle = "https://github.com/ChuMicro/ChuMicro-Bundle"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>\\S+)"

[tool.hatch.build.targets.sdist]
only-include = ["src/", "VERSION", "README.md", "tests/", "examples/", "docs/"]
exclude = [".gitignore"]

[tool.hatch.build.targets.wheel]
packages = ["src/chumicro_requests"]

[tool.chumicro]
# Flag this library as flash-mode-only on smaller boards.  Multi-KB
# HTTP parser + redirect-replay machinery + body buffers often OOM in
# RAM mode on Pi Pico W class boards (256 KB MCU class).
# ``chumicro-deploy``'s pre-flight check auto-switches RAM-mode
# deploys to flash when this flag is set.
requires_flash = true

# ---------------------------------------------------------------------
# Runtime-config manifest — declares the flat dotted keys this library
# knows about.  All keys are optional today: HttpClient takes its
# tunables via constructor args.  This block describes the
# forward-looking config-aware surface that an ``HttpClient.from_config``
# factory will consume.

[tool.chumicro.config]
required_keys = []
optional_keys = [
    "requests.default_timeout_ms",
    "requests.default_max_redirects",
    "requests.user_agent",
    "requests.max_body_bytes",
]

