[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chumicro-wifi"
dynamic = ["version"]
description = "Unified wifi supervisor across CircuitPython, MicroPython, and CPython — sole-supervisor model with reconnect, state machine, and per-runtime adapters."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "ChuMicro" },
]
dependencies = [
    "chumicro-config",
    "chumicro-timing",
]
keywords = [
    "circuitpython", "micropython", "microcontroller", "embedded",
    "esp32", "rp2040", "wifi", "wlan", "supervisor",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "chumicro-test-harness",
    "chumicro-pytest-device",
    "chumicro-workspace",
]

[project.urls]
Homepage = "https://github.com/ChuMicro/ChuMicro"
Documentation = "https://chumicro.github.io/ChuMicro/wifi/stable/"
Source = "https://github.com/ChuMicro/ChuMicro/tree/main/libraries/wifi"
Issues = "https://github.com/ChuMicro/ChuMicro/issues"
Bundle = "https://github.com/ChuMicro/ChuMicro-Bundle"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>\\S+)"

[tool.hatch.build.targets.sdist]
only-include = ["src/", "VERSION", "README.md", "tests/", "examples/", "docs/"]
exclude = [".gitignore"]

[tool.hatch.build.targets.wheel]
packages = ["src/chumicro_wifi"]

# ---------------------------------------------------------------------
# Runtime-config manifest — declares which flat dotted keys this
# library reads from the ``runtime_config.msgpack`` payload.
# ``chumicro-workspace`` reads this at deploy time to validate a
# project's merged config before baking the msgpack — missing required
# keys surface as a precise ``ConfigManifestError`` instead of a
# cryptic on-device ``MissingConfigKey`` boot failure.
#
# Schema:
#
#   [tool.chumicro.config]
#   required_keys = ["<dotted.key>", ...]   # missing → deploy-time error
#   optional_keys = ["<dotted.key>", ...]   # missing → factory uses default
#
# Keys are flat dotted strings — same vocabulary the runtime accessor
# uses (``config["wifi.password"]``).  An empty table is valid and
# means "this library reads runtime config but doesn't pin keys yet".
#
# Source of truth pairs with ``WifiConfig.from_config`` in
# ``src/chumicro_wifi/config.py`` — keep them in sync.

[tool.chumicro.config]
required_keys = ["wifi.ssid", "wifi.password"]
optional_keys = [
    "wifi.hostname",
    "wifi.connect_timeout_ms",
    "wifi.reconnect_backoff_start_ms",
    "wifi.reconnect_backoff_max_ms",
    "wifi.reconnect_max",
    "wifi.power_save",
]
